--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.scroll-custom::-webkit-scrollbar {
+    width: 6px;
+    background-color: gray;
+} 
+
+.scroll-custom::-webkit-scrollbar-thumb {
+    background-color: #14181d;
+}
